--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,10 @@
         </dependency>
     </dependencies>
 
-
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.19.1</version>
-        </plugin>
-
+    <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+    </dependency>
 
 </project>
