--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,14 @@
         </dependency>
     </dependencies>
 
-    <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-    </dependency>
+    <pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+            </plugin>
+            </plugins>
+    </pluginManagement>
 
-</project>
+    </project>
